Update README with new address, tweak styles to add text shadow, add GA

--- a/com.grack.adventure.web/war/css/style.css
+++ b/com.grack.adventure.web/war/css/style.css
@@ -161,6 +161,8 @@ html {
 	background-color: transparent;
 	color: white;
 	white-space: pre;
+	text-shadow: 0 0 20px;
+	overflow: visible; /* So text shadow isn't clipped */
 }
 
 #input {
