--- a/com.grack.adventure.web/war/css/style.css
+++ b/com.grack.adventure.web/war/css/style.css
@@ -161,7 +161,7 @@ html {
 	background-color: transparent;
 	color: white;
 	white-space: pre;
-	text-shadow: 0 0 20px;
+	text-shadow: 0 0 20px #aaa;
 	overflow: visible; /* So text shadow isn't clipped */
 }
 
